Bug 1648489. Send pinch starts events with some amount of scale instead of none with direct manipulation. r=kats

Differential Revision: https://phabricator.services.mozilla.com/D81477